# robotics-nodes

./: .gitattributes  .gitignore  COMMANDS.md  README.md  pyproject.toml  requirements.txt
datasets/baxter/: left_circle_p-15_t105.csv  left_circle_p15_t140.csv  left_circle_p15_t70.csv  left_circle_p60_t140.csv  left_circle_p60_t70.csv  left_circle_p90_t105.csv  left_random_p-15_t105.csv  left_random_p15_t70.csv  left_random_p60_t140.csv  left_random_p60_t70.csv  left_random_p90_t105.csv  left_spiral_p-15_t105.csv  left_spiral_p15_t140.csv  left_spiral_p15_t70.csv  left_spiral_p60_t140.csv  left_spiral_p90_t105.csv  left_squared_p-15_t105.csv  left_squared_p15_t140.csv  left_squared_p15_t70.csv  left_squared_p60_t140.csv  left_squared_p60_t70.csv  left_squared_p90_t105.csv  right_circle_p-15_t105.csv  right_circle_p15_t140.csv  right_circle_p15_t70.csv  right_circle_p60_t70.csv  right_circle_p90_t105.csv  right_random_p-15_t105.csv  right_random_p15_t70.csv  right_random_p60_t140.csv  right_random_p60_t70.csv  right_random_p90_t105.csv  right_spiral_p-15_t105.csv  right_spiral_p15_t70.csv  right_spiral_p60_t140.csv  right_spiral_p60_t70.csv  (+6 more)
model/: README_opus.md  data_processing_opus.py  inference_opus.py  neural_ode_robot_opus.py  test_opus.py  train_opus.py
models_trained/: euler_long.pt  euler_long_config.json  interp_const.pt  interp_linear.pt  interp_linear_config.json  rk4_long.pt  rk4_long_config.json  vv_long.pt  vv_long_config.json
modelv3/: data.py  fk.py  neural_ode_robot.py  test.py  train.py
vis/: fk.py  forward_kinematics.ipynb
